--- a/CTF.html
+++ b/CTF.html
@@ -10,9 +10,10 @@
 <div class="container">
   <h1>Défi Capture The Flag</h1>
   <p>Entrez une commande ?</p>
-  <textarea id="inputCode" rows="15" cols="50" oninput="checkInput()"></textarea>
+  <textarea id="inputCode" rows="15" cols="50"></textarea>
   <button onclick="executeCode()">Exécuter</button>
 </div>
 <script src="script.js"></script>
+
 </body>
 </html>
